{
  "version": 4,
  "terraform_version": "0.14.8",
  "serial": 2472,
  "lineage": "c8866f1c-99e7-14c8-ad8e-49d96dd40ce5",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_alb",
      "name": "application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:825035861533:loadbalancer/app/test-lb-tf/fc0b64f910711237",
            "arn_suffix": "app/test-lb-tf/fc0b64f910711237",
            "dns_name": "test-lb-tf-1122106588.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:825035861533:loadbalancer/app/test-lb-tf/fc0b64f910711237",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-lb-tf",
            "security_groups": [
              "sg-0a9882cbd715db659"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01dab02acc7186542"
              },
              {
                "subnet_id": "subnet-0d01a1488ec5d35eb"
              }
            ],
            "subnets": [
              "subnet-01dab02acc7186542",
              "subnet-0d01a1488ec5d35eb"
            ],
            "vpc_id": "vpc-0bca5035d202f6b5c",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.vpc.aws_security_group.aws_security_group",
            "module.vpc.aws_subnet.private_subnet_b",
            "module.vpc.aws_subnet.public_subnet_a",
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:825035861533:listener/app/test-lb-tf/fc0b64f910711237/0e1e1faff27ee623",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:825035861533:targetgroup/target-group/9133ce06d8e797b8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:825035861533:listener/app/test-lb-tf/fc0b64f910711237/0e1e1faff27ee623",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:825035861533:loadbalancer/app/test-lb-tf/fc0b64f910711237",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_alb.application_load_balancer",
            "module.alb.aws_lb_target_group.target_group",
            "module.vpc.aws_security_group.aws_security_group",
            "module.vpc.aws_subnet.private_subnet_b",
            "module.vpc.aws_subnet.public_subnet_a",
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:825035861533:targetgroup/target-group/9133ce06d8e797b8",
            "arn_suffix": "targetgroup/target-group/9133ce06d8e797b8",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200,301,302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:825035861533:targetgroup/target-group/9133ce06d8e797b8",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0bca5035d202f6b5c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.endp",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:825035861533:vpc-endpoint/vpce-08ed1b2ac2ced3a22",
            "dns_entry": [
              {
                "dns_name": "vpce-08ed1b2ac2ced3a22-k01seftn.dkr.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              },
              {
                "dns_name": "vpce-08ed1b2ac2ced3a22-k01seftn-us-east-2b.dkr.ecr.us-east-2.vpce.amazonaws.com",
                "hosted_zone_id": "ZC8PG0KIFKBRI"
              }
            ],
            "id": "vpce-08ed1b2ac2ced3a22",
            "network_interface_ids": [
              "eni-054ba864bb6a5dbfe"
            ],
            "owner_id": "825035861533",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0a9882cbd715db659"
            ],
            "service_name": "com.amazonaws.us-east-2.ecr.dkr",
            "state": "available",
            "subnet_ids": [
              "subnet-0d01a1488ec5d35eb"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dkr-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0bca5035d202f6b5c"
          },
          "dependencies": [
            "module.vpc.aws_security_group.aws_security_group",
            "module.vpc.aws_subnet.private_subnet_b",
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.endp",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:825035861533:vpc-endpoint/vpce-0b964208cc2b8abde",
            "cidr_blocks": [
              "52.219.80.0/20",
              "3.5.128.0/22",
              "3.5.132.0/23",
              "52.219.96.0/20"
            ],
            "id": "vpce-0b964208cc2b8abde",
            "owner_id": "825035861533",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-7ba54012",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0ab3653726d4a7076"
            ],
            "service_name": "com.amazonaws.us-east-2.s3",
            "state": "available",
            "tags": {
              "Environment": "dev",
              "Name": "s3-endpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0bca5035d202f6b5c"
          },
          "dependencies": [
            "module.vpc.aws_eip.aws_eip2",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.aws_nat_gateway2",
            "module.vpc.aws_route_table.rtp2",
            "module.vpc.aws_subnet.public_subnet_b",
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "rtpub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:825035861533:route-table/rtb-00104579aa7d27431",
            "default_route_table_id": "rtb-00104579aa7d27431",
            "id": "rtb-00104579aa7d27431",
            "owner_id": "825035861533",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bd97821bdde06d96",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RTT"
            },
            "vpc_id": "vpc-0bca5035d202f6b5c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "aws_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-09225bfaa6f857514",
            "domain": "vpc",
            "id": "eipalloc-067ee4fff5fe175de",
            "network_border_group": "us-east-2",
            "network_interface": "eni-011e5ef067a7b78b0",
            "private_dns": "ip-10-0-3-40.us-east-2.compute.internal",
            "private_ip": "10.0.3.40",
            "public_dns": "ec2-3-141-184-236.us-east-2.compute.amazonaws.com",
            "public_ip": "3.141.184.236",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "aws_eip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-066b17f3f1019fd8f",
            "domain": "vpc",
            "id": "eipalloc-0a9206212b52b0c40",
            "network_border_group": "us-east-2",
            "network_interface": "eni-069b283b9e4e48ea0",
            "private_dns": "ip-10-0-4-208.us-east-2.compute.internal",
            "private_ip": "10.0.4.208",
            "public_dns": "ec2-3-17-225-233.us-east-2.compute.amazonaws.com",
            "public_ip": "3.17.225.233",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:825035861533:internet-gateway/igw-0bd97821bdde06d96",
            "id": "igw-0bd97821bdde06d96",
            "owner_id": "825035861533",
            "tags": {
              "Name": "Internet-gateway"
            },
            "vpc_id": "vpc-0bca5035d202f6b5c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "aws_nat_gateway1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-067ee4fff5fe175de",
            "id": "nat-0e1801574ca532ec0",
            "network_interface_id": "eni-011e5ef067a7b78b0",
            "private_ip": "10.0.3.40",
            "public_ip": "3.141.184.236",
            "subnet_id": "subnet-01dab02acc7186542",
            "tags": {
              "Name": "Nat_for_A"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.aws_eip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_subnet.public_subnet_a",
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "aws_nat_gateway2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a9206212b52b0c40",
            "id": "nat-0f158bca2a09647ac",
            "network_interface_id": "eni-069b283b9e4e48ea0",
            "private_ip": "10.0.4.208",
            "public_ip": "3.17.225.233",
            "subnet_id": "subnet-0d1f287aba10d0ca7",
            "tags": {
              "Name": "Nat_for_B"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.aws_eip2",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_subnet.public_subnet_b",
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:825035861533:route-table/rtb-05499574d94988f59",
            "id": "rtb-05499574d94988f59",
            "owner_id": "825035861533",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e1801574ca532ec0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT"
            },
            "vpc_id": "vpc-0bca5035d202f6b5c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.aws_eip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.aws_nat_gateway1",
            "module.vpc.aws_subnet.public_subnet_a",
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtp2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:825035861533:route-table/rtb-0ab3653726d4a7076",
            "id": "rtb-0ab3653726d4a7076",
            "owner_id": "825035861533",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f158bca2a09647ac",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT2"
            },
            "vpc_id": "vpc-0bca5035d202f6b5c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.aws_eip2",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.aws_nat_gateway2",
            "module.vpc.aws_subnet.public_subnet_b",
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0beb7d9092e2c510e",
            "route_table_id": "rtb-00104579aa7d27431",
            "subnet_id": "subnet-01dab02acc7186542"
          },
          "dependencies": [
            "module.vpc.aws_default_route_table.rtpub",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_subnet.public_subnet_a",
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd15f86154c65500",
            "route_table_id": "rtb-05499574d94988f59",
            "subnet_id": "subnet-020faf2122506723f"
          },
          "dependencies": [
            "module.vpc.aws_eip.aws_eip",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.aws_nat_gateway1",
            "module.vpc.aws_route_table.rtp",
            "module.vpc.aws_subnet.private_subnet_a",
            "module.vpc.aws_subnet.public_subnet_a",
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e819de359730a503",
            "route_table_id": "rtb-00104579aa7d27431",
            "subnet_id": "subnet-0d1f287aba10d0ca7"
          },
          "dependencies": [
            "module.vpc.aws_default_route_table.rtpub",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_subnet.public_subnet_b",
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03672f7b0ea16c5b0",
            "route_table_id": "rtb-0ab3653726d4a7076",
            "subnet_id": "subnet-0d01a1488ec5d35eb"
          },
          "dependencies": [
            "module.vpc.aws_eip.aws_eip2",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_nat_gateway.aws_nat_gateway2",
            "module.vpc.aws_route_table.rtp2",
            "module.vpc.aws_subnet.private_subnet_b",
            "module.vpc.aws_subnet.public_subnet_b",
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aws_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:825035861533:security-group/sg-0a9882cbd715db659",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a9882cbd715db659",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20210414090703180100000010",
            "name_prefix": "terraform-",
            "owner_id": "825035861533",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0bca5035d202f6b5c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.aws_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:825035861533:subnet/subnet-020faf2122506723f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.8.0/22",
            "id": "subnet-020faf2122506723f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "825035861533",
            "tags": {
              "Name": "Private_subnet_a"
            },
            "tags_all": {
              "Name": "Private_subnet_a"
            },
            "vpc_id": "vpc-0bca5035d202f6b5c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:825035861533:subnet/subnet-0d01a1488ec5d35eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.12.0/22",
            "id": "subnet-0d01a1488ec5d35eb",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "825035861533",
            "tags": {
              "Name": "Private_subnet_b"
            },
            "tags_all": {
              "Name": "Private_subnet_b"
            },
            "vpc_id": "vpc-0bca5035d202f6b5c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:825035861533:subnet/subnet-01dab02acc7186542",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/22",
            "id": "subnet-01dab02acc7186542",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "825035861533",
            "tags": {
              "Name": "Public_subnet_a"
            },
            "tags_all": {
              "Name": "Public_subnet_a"
            },
            "vpc_id": "vpc-0bca5035d202f6b5c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:825035861533:subnet/subnet-0d1f287aba10d0ca7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/22",
            "id": "subnet-0d1f287aba10d0ca7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "825035861533",
            "tags": {
              "Name": "Public_subnet_b"
            },
            "tags_all": {
              "Name": "Public_subnet_b"
            },
            "vpc_id": "vpc-0bca5035d202f6b5c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.aws_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aws_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:825035861533:vpc/vpc-0bca5035d202f6b5c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/20",
            "default_network_acl_id": "acl-0e8ae6b3eccf555f9",
            "default_route_table_id": "rtb-00104579aa7d27431",
            "default_security_group_id": "sg-05024dd22514a53e2",
            "dhcp_options_id": "dopt-72b82519",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0bca5035d202f6b5c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00104579aa7d27431",
            "owner_id": "825035861533",
            "tags": {
              "Name": "dev_youtube-vpc"
            },
            "tags_all": {
              "Name": "dev_youtube-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}